--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,13 @@
 ---
 
+- name: elastizabbix-configure | Creates directory /etc/zabbix/scritps
+  file:
+    path=/etc/zabbix/scripts
+    state=directory
+    owner=root
+    group=root
+    mode=0644
+
 - name: elastizabbix-configure | Add elastizabbix in /etc/zabbix/scritps
   template:
     src=elastizabbix.j2
